# jbackup

./: .coveragerc  .pre-commit-config.yaml  JBackup-technical-document.odt  README.md  design-doc.org  env_vars  old-files.7z  pygmentize-source-block.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  update-script-version.sh
data/: completion
jbackup/: __init__.py  __main__.py  _logging.yaml  _path.py  _template.py  loader.py  logging.py  logging.pyi  run.py  utils.py
jbackup/actions/: __init__.py  action_protocol.py  params.py
jbackup/rules/: __init__.py  utils.py
jbackup/rules/config/: config_protocol.py  toml_config_adapter.py
jbackup/template/: __init__.py  _template.py
jbackup/tests/: _testaction.py  _testbadaction.py  _testmod.py  test_actions.py  test_logging.py  test_rules.py  test_templates.py  test_utils.py
src/jbackup/: __init__.py  __main__.py  _complete.py  loader.py  logging.py  utils.py
src/jbackup/actions/: __init__.py  params.py
src/jbackup/rules/: __init__.py
src/jbackup/rules/config/: __init__.py  config_protocol.py  toml_config_adapter.py
src/jbackup/template/: __init__.py  _template.py
src/jbackup/tests/: _testaction.py  _testrule.toml  test_actions.py  test_loader.py  test_logging.py  test_rules.py  test_templates.py  test_utils.py
