[tool.poetry]
name = "jbackup"
version = "1.0b1"
description = "Extensible backup system"
authors = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
