[tool.poetry]
name = "jbackup"
version = "2.0a1"
description = "Extensible backup system"
authors = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
tomli = {markers = "python_version < \"3.11\"", version = "^2.0.1"}
tomli-w = "^1.0.0"
platformdirs = "^4.2.2"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[tool.poetry.scripts]
jbackup = "jbackup.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
